--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />   
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
-
-    <title>Daniel Asakpa</title>  
-
+    />
+    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+    <title>Daniel Asakpa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
